# rolling_hash

./: .gitignore  CMakeLists.txt  README.md
sources/: CMakeLists.txt
sources/app/: CMakeLists.txt
sources/app/src/: main.cpp
sources/lib/: CMakeLists.txt
sources/lib/include/: buffered_file_reader.h  data_reader.h  data_writer.h  delta.h  delta_calculation.h  file_delta_builder.h  file_operations.h  file_reader.h  file_writer.h  hash.h  hash_utils.h  hasher.h  memory_delta_builder.h  signature.h  signature_creator.h  types.h
sources/lib/src/: buffered_file_reader.cpp  file_delta_builder.cpp  file_operations.cpp  file_reader.cpp  file_writer.cpp  memory_delta_builder.cpp  signature.cpp
sources/tests/: CMakeLists.txt  buffered_file_reader_tests.cpp  delta_builder_tests.cpp  file_reader_tests.cpp  file_writer_tests.cpp  hasher_tests.cpp  mock_reader.cpp  mock_reader.h  signature_creator_tests.cpp  signature_tests.cpp
sources/tests/src/: file_reader_tests.cpp  file_writer_tests.cpp  signature_creator_tests.cpp  tmp_file.h
